bugs/tests/fuzz-05-18-13-21-59/r_750_r_44_issue3056_F10_P44_8_M1.stderr
likely_hits/r_750_r_44_issue3056_F10_P44_8_M1.p4(2): [--Werror=type-error] error: |-|: cannot be applied to expression '"a"' with type 'string'
b = (("a") |-| ({#}))
        ^
In file: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172
Compiler Bug: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172: Null srcType

